--- a/.env
+++ b/.env
@@ -21,9 +21,8 @@ APP_SECRET=df65b971eb5ea6568e1a67603debee43
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+MAILER_DSN=gmail+smtp://realityvison.pidev:pidev2022*-ESPRIT-@default
 ###< symfony/mailer ###
-
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
@@ -33,9 +32,7 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/esplay?serverVersion=5.7.36"
 #DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
-###> symfony/swiftmailer-bundle ###
-# For Gmail as a transport, use: "gmail://username:password@localhost"
-# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
-# Delivery is disabled by default via "null://localhost"
-#MAILER_URL=gmail://realityvison.pidev@gmail.com:pidev2022*-ESPRIT-@localhost
-###< symfony/swiftmailer-bundle ###
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+# MAILER_DSN=gmail://USERNAME:PASSWORD@default
+###< symfony/google-mailer ###
