--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -10,9 +10,15 @@ doctrine:
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
         auto_mapping: true
         mappings:
-            App:
+           App:
                 is_bundle: false
                 type: annotation
+                dir: "%kernel.project_dir%/src/Entity"
                 dir: '%kernel.project_dir%/src/Entity'
                 prefix: 'App\Entity'
                 alias: App
+        dql:
+            datetime_functions:
+                DAY: DoctrineExtensions\Query\Mysql\Day
+                MONTH: DoctrineExtensions\Query\Mysql\Month
+                YEAR: DoctrineExtensions\Query\Mysql\Year
