--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,8 @@
         "symfony/web-server-bundle": "4.4.*",
         "symfony/yaml": "4.4.*",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0",
+        "twig/twig": "~2.0",
+        "nomaya/social-bundle": "dev-master",
         "vich/uploader-bundle": "^1.19"
     },
     "require-dev": {
