--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,14 @@
         "beberlei/doctrineextensions": "^1.3",
         "blackknight467/star-rating-bundle": "2.*",
         "cmen/google-charts-bundle": "^5.0",
-        "doctrine/annotations": "^1.0",
+        "doctrine/annotations": "^1.13",
         "doctrine/doctrine-bundle": "^2.6",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.11",
         "dompdf/dompdf": "^1.2",
         "knplabs/knp-paginator-bundle": "^5.8",
         "liip/imagine-bundle": "^2.7",
+        "nomaya/social-bundle": "dev-master",
         "phpdocumentor/reflection-docblock": "^5.3",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "4.4.*",
@@ -45,7 +46,7 @@
         "symfony/web-server-bundle": "4.4.*",
         "symfony/yaml": "4.4.*",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0",
+        "twig/twig": "~2.0",
         "vich/uploader-bundle": "^1.19"
     },
     "require-dev": {
